--- a/deploy/k8s/rbac.yaml
+++ b/deploy/k8s/rbac.yaml
@@ -6,7 +6,7 @@ metadata:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: stackrox:monitor-cluster
+  name: stackrox:monitor-deployments
 subjects:
 - kind: ServiceAccount
   name: sensor
