--- a/ui/package.json
+++ b/ui/package.json
@@ -81,7 +81,7 @@
     "@storybook/react": "^3.3.15",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
-    "cypress": "1.4.2",
+    "cypress": "^2.1.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -93,6 +93,7 @@
     "mocha-junit-reporter": "^1.17.0",
     "mocha-multi-reporters": "^1.1.7",
     "prettier": "^1.10.2",
-    "redux-immutable-state-invariant": "^2.1.0"
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-saga-test-plan": "^3.6.0"
   }
 }
