AP-596: OpenShift Listener for deployment resources

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -134,3 +134,11 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
   name = "bitbucket.org/stack-rox/cscc"
   source = "git@bitbucket.org:stack-rox/cscc.git"
   version = "0.1.0"
+
+[[constraint]]
+  name = "github.com/openshift/api"
+  version = "v3.9.0"
+
+[[constraint]]
+  name = "github.com/openshift/client-go"
+  version = "v3.9.0"
