--- a/prometheus/k8s.yaml
+++ b/prometheus/k8s.yaml
@@ -17,7 +17,7 @@ spec:
         app: prevent-health
     spec:
       containers:
-      - image: stackrox/prevent-health:latest
+      - image: stackrox/prevent-health:1.0
         name: prevent-health
         imagePullPolicy: Always
         env:
