--- a/prometheus/lb.yaml
+++ b/prometheus/lb.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: central-lb
+  name: prevent-health-lb
   namespace: stackrox
 spec:
   ports:
-  - port: 443
-    targetPort: 443
+  - port: 9090
+    targetPort: 9090
   selector:
-    app: central
+    app: prevent-health
   type: LoadBalancer
   loadBalancerSourceRanges:
   # This is the office IP.
