Update toolchain to Go 1.10.2 and rules_go 0.11.1
Pull request #455
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,7 +3,10 @@ load("@io_bazel_rules_go//go:def.bzl", "gazelle")
 
 gazelle(
     name = "gazelle",
-    prefix = "bitbucket.org/stack-rox/apollo",
-    args = ["-build_file_name", "BUILD.bazel"],
+    args = [
+        "-build_file_name",
+        "BUILD.bazel",
+    ],
     external = "vendored",
+    prefix = "bitbucket.org/stack-rox/apollo",
 )
