--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-numeric-input": "^2.2.3",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-prop-types": "^0.0.3",
     "react-router-redux": "^5.0.0-alpha.9",
