--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 
 [[constraint]]
   name = "github.com/golang/protobuf"
-  version = "=1.0.0"
+  version = "=1.1.0"
 
 [[constraint]]
   name = "github.com/grpc-ecosystem/go-grpc-middleware"
@@ -35,7 +35,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 
 [[constraint]]
   name = "github.com/grpc-ecosystem/grpc-gateway"
-  version = "1.3.1"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/hashicorp/golang-lru"
@@ -133,7 +133,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "bitbucket.org/stack-rox/cscc"
   source = "git@bitbucket.org:stack-rox/cscc.git"
-  version = "0.1.0"
+  version = "=0.2.0"
 
 [[constraint]]
   name = "github.com/openshift/api"
