Rate limit sensor events and access to registries and scanners. Also cache integration results
Approved-by: Robby Cochran <rc@stackrox.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -146,3 +146,11 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/gogo/protobuf"
   version = "v1.0.0"
+
+[[constraint]]
+  name = "golang.org/x/time"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/karlseguin/ccache"
+  branch = "master"
