--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,12 +56,12 @@ jobs:
       - run:
           name: Push new Docker image
           command: |
-            docker tag stackrox/prevent:latest stackrox/prevent:$(git describe --tags)
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+
+            docker tag stackrox/prevent:latest stackrox/prevent:$(git describe --tags)
             docker push stackrox/prevent:$(git describe --tags)
 
             docker tag stackrox/prevent-health:latest stackrox/prevent-health:$(git describe --tags)
-            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
             docker push stackrox/prevent-health:$(git describe --tags)
 
   deploy-k8s:
@@ -162,6 +162,27 @@ jobs:
           path: ui/cypress/screenshots
           destination: ui-e2e-screenshots
 
+  push-release:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker
+
+      - run:
+          name: Push image into stackrox.io
+          command: |
+            docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
+            docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD" stackrox.io
+
+            docker pull stackrox/prevent:$(git describe --tags)
+            docker tag stackrox/prevent:$(git describe --tags) stackrox.io/prevent:$(git describe --tags)
+            docker push stackrox.io/prevent:$(git describe --tags)
+
+            docker pull stackrox/prevent-health:$(git describe --tags)
+            docker tag stackrox/prevent-health:$(git describe --tags) stackrox.io/prevent-health:$(git describe --tags)
+            docker push stackrox.io/prevent-health:$(git describe --tags)
+
+
 workflows:
   version: 2
   build_all:
@@ -174,5 +195,14 @@ workflows:
           requires:
             - build
           filters:
+            tags:
+              only: /.*/
+      # Push release only on tags.
+      - push-release:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /.*/
