Adjust Circle build container sizes
Use a large CircleCI container for build, medium for k8s tests,
and small for release-push.

Pull request #502

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ version: 2
 jobs:
   build:
     <<: *defaults
+    resource_class: large
     steps:
       - checkout
       - setup_remote_docker
@@ -174,6 +175,7 @@ jobs:
 
   push-release:
     <<: *defaults
+    resource_class: small
     steps:
       - checkout
       - setup_remote_docker
