--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,8 @@
     "object-resolve-path": "^1.1.1",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
+    "raven-for-redux": "^1.3.1",
+    "raven-js": "^3.26.2",
     "react": "^16.2.0",
     "react-collapsible": "^2.0.4",
     "react-dom": "^16.2.0",
