AP-699: Flatten the Policy API to be without categories
Approved-by: Shweta Hemdev <sh@stackrox.com>
Approved-by: Robert Stark <rs@stackrox.com>

--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -3,7 +3,7 @@
   "description": "Alert on deployments with nginx:1.10 image from 'docker.io'",
   "severity": "MEDIUM_SEVERITY",
   "categories": ["Image Assurance"],
-  "image_policy": {
+  "fields": {
     "image_name": {
       "registry": "docker.io",
       "repo": "nginx",
