Add linter to automation tests * And fix the issues it found. * Also hook up the lint so that it runs in CI.
Merged in viswa/lint-groovy (pull request #561)
Approved-by: Parul Shukla <p@stackrox.com>
Approved-by: Xuguang (Luke) Liu <ll@stackrox.com>

--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'codenarc'
 
 sourceCompatibility = 1.8
 version = '1.0'
+
+codenarc.configFile = file("./codenarc-rules.groovy")
 
 // In this section you declare where to find the dependencies of your project
 repositories {
