AP-694: Add resource limits and requests
Approved-by: Viswajith Venugopal <vv@stackrox.com>

--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -1,5 +1,5 @@
 {
-  "name": "DockerHub Nginx 1.10",
+  "name": "DockerHub NGINX 1.10",
   "description": "Alert on deployments with nginx:1.10 image from 'docker.io'",
   "severity": "MEDIUM_SEVERITY",
   "categories": ["Image Assurance"],
