AP-733: fix waiting for cluster to check-in (+ some refactoring) The major changes include:  * ClustersModal split into more components  * Cluster form descriptors are dead, long live React Components!  * Kill PanelSlider, since react-slick is designed only for static content sliding  * Kill SimpleForm because it had little value (and violated common sense with a fixed formId)  * Use rc-tooltip insteaf of react-tooltip since the former one doesn't require "id" generation (migration is not complete)  * Kill DockerEE (keep only Docker Swarm)  * Move cluster creation side effects to sagas  * Kill storybook
Merged in ivan/AP-733-fix-waiting-for-cluster (pull request #574)

--- a/ui/cypress/fixtures/benchmarks/configs.json
+++ b/ui/cypress/fixtures/benchmarks/configs.json
@@ -4,7 +4,7 @@
             "name": "CIS Docker v1.1.0 Benchmark",
             "editable": false,
             "checks": [],
-            "clusterTypes": ["KUBERNETES_CLUSTER", "SWARM_CLUSTER", "DOCKER_EE_CLUSTER"]
+            "clusterTypes": ["KUBERNETES_CLUSTER", "SWARM_CLUSTER"]
         },
         {
             "name": "CIS Kubernetes v1.2.0 Benchmark",
@@ -16,7 +16,7 @@
             "name": "CIS Swarm v1.1.0 Benchmark",
             "editable": false,
             "checks": [],
-            "clusterTypes": ["SWARM_CLUSTER", "DOCKER_EE_CLUSTER"]
+            "clusterTypes": ["SWARM_CLUSTER"]
         }
     ]
 }
