--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "query-string": "^5.0.1",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.2",
+    "rc-tooltip": "^3.7.2",
     "react": "^16.2.0",
     "react-collapsible": "^2.0.4",
     "react-dom": "^16.2.0",
@@ -77,10 +78,6 @@
     }
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-links": "^3.3.15",
-    "@storybook/addons": "^3.3.15",
-    "@storybook/react": "^3.3.15",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "cypress": "^3.0.1",
