Stamp VERSION file into the Dockerfile. Code stamping is preferred, but more difficult
Approved-by: Ivan Kornienko <i@stackrox.com>

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -17,6 +17,7 @@ COPY ./benchmarks/ /data/benchmarks
 COPY ./policies/ /data/policies
 COPY ./bin/ /prevent/
 COPY ./ui/build  /ui/
+COPY ./VERSION /VERSION
 
 EXPOSE 443
 
