Create k8s NetworkPolicy to allow Central access
Add a NetworkPolicy to allow traffic to Central
when deploying in Kubernetes. This allows Central
access even when the default-deny rule from D&R
has been created in the cluster.

Pull request #590
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,7 @@ jobs:
               --num-nodes 2 \
               --create-subnetwork range=/19 \
               --enable-ip-alias \
+              --enable-network-policy \
               "prevent-ci-${CIRCLE_BUILD_NUM}"
 
       # See https://stackoverflow.com/a/46316672 for why we have to use user/pass.
