Auto fixer for common QA test lint issues
* Add a hacky Python script that should hopefully make life a little easier.
* Currently only fixes indent issues, but can easily add methods that fix other issues.

Merged in viswa/auto-fix-lint-issues (pull request #594)
Approved-by: Parul Shukla <p@stackrox.com>

--- a/qa-tests-backend/Makefile
+++ b/qa-tests-backend/Makefile
@@ -7,4 +7,9 @@ all: style
 .PHONY: style
 style:
 	@echo "+ $@"
-	gradle codenarcMain codenarcTest
+	gradle --continue codenarcMain codenarcTest
+
+.PHONY: style-fix
+style-fix:
+	@echo "+ $@"
+	@scripts/fix_lint.py .
