Add debug output to Cypress (AP-763)
Merged in ivan/cypress-debug-output (pull request #591)

--- a/ui/package.json
+++ b/ui/package.json
@@ -60,7 +60,7 @@
     "lint": "NODE_PATH=src eslint src prod cypress",
     "cypress-open": "cypress open",
     "test-e2e-local": "cypress run",
-    "test-e2e-ci": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
+    "test-e2e-ci": "DEBUG=cypress:* cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
     "eject": "react-scripts eject",
     "storybook": "NODE_PATH=src start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
