--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -2,7 +2,7 @@
   "name": "DockerHub NGINX 1.10",
   "description": "Alert on deployments with nginx:1.10 image from 'docker.io'",
   "severity": "MEDIUM_SEVERITY",
-  "categories": ["Image Assurance"],
+  "categories": ["DevOps Best Practices", "Security Best Practices"],
   "fields": {
     "image_name": {
       "registry": "docker.io",
