--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,6 +3,11 @@
 
 ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 
+[prune]
+  go-tests = true
+  unused-packages = true
+  non-go = true
+
 # github.com/couchbase/moss has the incorrect version and doesn't run
 [[override]]
   name = "github.com/couchbase/ghistogram"
